--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,13 +24,12 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  misspell:
-    name: misspell
+  typos:
+    name: Typos
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: misspell
-        uses: reviewdog/action-misspell@v1
+      - name: Typos
+        uses: crate-ci/typos@v1.28.3
         with:
-          locale: "US"
-          level: "info"
+          config: .github/.typos.toml
